# qwen-hackathon-triage-trace

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  puppeteer-config.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: AGENTS.md  Dockerfile  alembic.ini
backend/alembic/: env.py
backend/alembic/versions/: 37b24768e1c8_add_run_record_table.py  (+1 more)
backend/app/: action_rules.py  agent.py  config.py  decisions.py  demo.py  demo_scenarios.py  eval.py  main.py  memory.py  models.py  qwen.py  schemas.py  simulate.py  skills.py  tools.py
backend/evaluations/: latest.json  mock_regression.json  scenarios.json
backend/scripts/: evaluate.py  live_qwen_smoke.py
backend/tests/: conftest.py  test_agent_validation.py  test_approval.py  test_demo.py  test_endpoints.py  test_eval.py  test_memory.py  test_retrieval.py  test_stateless.py
deploy/alibaba/: README.md  cloud-init.sh  main.tf  variables.tf
docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  JUDGE_PACKET.md  RUBRIC_SCORECARD.md  architecture.mmd  benchmark_strategy.md  competition_strategy.md  deployment.md  research_report.md  threat_model.md
evaluations/: asb_memorygate.json  latest.json  memoryagentbench.json
frontend/: AGENTS.md  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: AccumulationDemo.tsx  App.tsx  JudgeDemo.tsx  ScenarioSelector.tsx  SequenceWalkthrough.tsx  WinningDemo.tsx  index.css  types.ts
scripts/: deploy_alibaba_ecs.sh  download_memoryagentbench.py  record_ecs_proof.py
(+11 files in other folders)
